--- a/index.html
+++ b/index.html
@@ -20,3 +20,79 @@
     </div>
 </body>
 </html>
+<!DOCTYPE html>
+<html>
+<head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <style>
+        /* 1. Website ka look thik karna */
+        body {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            margin: 0;
+            background-color: #f0f2f5;
+        }
+
+        /* 2. Navigation Bar (Tabs) ka design */
+        .topnav {
+            overflow: hidden;
+            background-color: #24292e; /* Dark Gray color */
+            display: flex;
+            justify-content: center;
+        }
+
+        /* 3. Har ek Option (Tab) ka style */
+        .topnav a {
+            color: #f2f2f2;
+            text-align: center;
+            padding: 14px 16px;
+            text-decoration: none;
+            font-size: 17px;
+        }
+
+        /* 4. Mouse le jane par rang badalna */
+        .topnav a:hover {
+            background-color: #ddd;
+            color: black;
+        }
+
+        /* 5. Jo page khula hai uska color */
+        .topnav a.active {
+            background-color: #007bff;
+            color: white;
+        }
+
+        /* 6. Content area */
+        .main-content {
+            padding: 20px;
+            text-align: center;
+        }
+
+        .card {
+            background: white;
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+            max-width: 600px;
+            margin: 20px auto;
+        }
+    </style>
+</head>
+<body>
+
+<div class="topnav">
+  <a class="active" href="#home">Home</a>
+  <a href="#about">About Bot</a>
+  <a href="#features">Features</a>
+  <a href="#contact">Contact</a>
+</div>
+
+<div class="main-content">
+  <div class="card">
+    <h1>MyBot Official Site 🤖</h1>
+    <p>Upar diye gaye <b>Tabs</b> par click karke aap options check kar sakte hain.</p>
+    <img src="https://via.placeholder.com/150" alt="Bot Image" style="width:100px; border-radius:50%;">
+  </div>
+</div>
+
+</body>
+</html>
