--- a/index.html
+++ b/index.html
@@ -1,98 +1,135 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>My Awesome Bot</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>MyBot | Ultra Premium</title>
     <style>
-        body { font-family: sans-serif; text-align: center; background: #121212; color: white; padding: 50px; }
-        .btn { background: #7289da; color: white; padding: 15px 25px; text-decoration: none; border-radius: 5px; font-weight: bold; }
-        .features { margin-top: 30px; color: #bbb; }
-    </style>
-</head>
-<body>
-    <h1>🤖 My Bot Name</h1>
-    <p>Duniya ka sabse behtareen bot!</p>
-    <br><br>
-    <a href="APNA_BOT_INVITE_LINK_YAHAN_DAALEIN" class="btn">Add to Server</a>
-    
-    <div class="features">
-        <h3>Features:</h3>
-        <p>✅ 24/7 Online | ✅ Fast Response | ✅ Music & Fun</p>
-    </div>
-</body>
-</html>
-<!DOCTYPE html>
-<html>
-<head>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <style>
-        /* 1. Website ka look thik karna */
+        /* 1. Animated Gradient Background */
         body {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             margin: 0;
-            background-color: #f0f2f5;
-        }
-
-        /* 2. Navigation Bar (Tabs) ka design */
-        .topnav {
-            overflow: hidden;
-            background-color: #24292e; /* Dark Gray color */
+            padding: 0;
+            font-family: 'Poppins', sans-serif;
+            background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+            background-size: 400% 400%;
+            animation: gradient 15s ease infinite;
+            height: 100vh;
             display: flex;
-            justify-content: center;
+            flex-direction: column;
+            align-items: center;
         }
 
-        /* 3. Har ek Option (Tab) ka style */
-        .topnav a {
-            color: #f2f2f2;
-            text-align: center;
-            padding: 14px 16px;
+        @keyframes gradient {
+            0% { background-position: 0% 50%; }
+            50% { background-position: 100% 50%; }
+            100% { background-position: 0% 50%; }
+        }
+
+        /* 2. Fancy Navigation Bar */
+        .navbar {
+            margin-top: 20px;
+            background: rgba(255, 255, 255, 0.2);
+            backdrop-filter: blur(10px); /* Glass effect */
+            padding: 10px 30px;
+            border-radius: 50px;
+            border: 1px solid rgba(255, 255, 255, 0.3);
+            display: flex;
+            gap: 20px;
+        }
+
+        .navbar a {
             text-decoration: none;
-            font-size: 17px;
+            color: white;
+            font-weight: bold;
+            font-size: 1.1rem;
+            padding: 8px 15px;
+            transition: 0.3s;
         }
 
-        /* 4. Mouse le jane par rang badalna */
-        .topnav a:hover {
-            background-color: #ddd;
-            color: black;
+        .navbar a:hover {
+            background: rgba(255, 255, 255, 0.4);
+            border-radius: 20px;
+            transform: translateY(-3px);
         }
 
-        /* 5. Jo page khula hai uska color */
-        .topnav a.active {
-            background-color: #007bff;
+        /* 3. Main Glass Card */
+        .container {
+            margin-top: 50px;
+            background: rgba(255, 255, 255, 0.15);
+            backdrop-filter: blur(15px);
+            padding: 40px;
+            border-radius: 30px;
+            border: 1px solid rgba(255, 255, 255, 0.2);
+            text-align: center;
+            color: white;
+            box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+            max-width: 500px;
+            width: 90%;
+        }
+
+        h1 { font-size: 2.5rem; margin-bottom: 10px; }
+        p { font-size: 1.2rem; opacity: 0.9; }
+
+        /* 4. Fancy Buttons (Options) */
+        .options {
+            display: flex;
+            flex-direction: column;
+            gap: 15px;
+            margin-top: 30px;
+        }
+
+        .opt-btn {
+            background: white;
+            color: #e73c7e;
+            padding: 15px;
+            border-radius: 15px;
+            text-decoration: none;
+            font-weight: bold;
+            font-size: 1.1rem;
+            transition: 0.4s;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            gap: 10px;
+            box-shadow: 0 4px 15px rgba(0,0,0,0.1);
+        }
+
+        .opt-btn:hover {
+            transform: scale(1.05);
+            background: #24292e;
             color: white;
         }
 
-        /* 6. Content area */
-        .main-content {
-            padding: 20px;
-            text-align: center;
+        .emoji-spin {
+            animation: spin 2s linear infinite;
         }
 
-        .card {
-            background: white;
-            padding: 20px;
-            border-radius: 10px;
-            box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-            max-width: 600px;
-            margin: 20px auto;
+        @keyframes spin {
+            from { transform: rotate(0deg); }
+            to { transform: rotate(360deg); }
         }
     </style>
 </head>
 <body>
 
-<div class="topnav">
-  <a class="active" href="#home">Home</a>
-  <a href="#about">About Bot</a>
-  <a href="#features">Features</a>
-  <a href="#contact">Contact</a>
-</div>
+    <nav class="navbar">
+        <a href="#">🏠 Home</a>
+        <a href="#">🛠️ Tools</a>
+        <a href="#">🌟 Premium</a>
+        <a href="#">📞 Help</a>
+    </nav>
 
-<div class="main-content">
-  <div class="card">
-    <h1>MyBot Official Site 🤖</h1>
-    <p>Upar diye gaye <b>Tabs</b> par click karke aap options check kar sakte hain.</p>
-    <img src="https://via.placeholder.com/150" alt="Bot Image" style="width:100px; border-radius:50%;">
-  </div>
-</div>
+    <div class="container">
+        <h1>Welcome to MyBot <span class="emoji-spin">🤖</span></h1>
+        <p>The most powerful bot in your pocket! 🔥</p>
+
+        <div class="options">
+            <a href="#" class="opt-btn">🚀 Get Started Now</a>
+            <a href="#" class="opt-btn">📁 Download Modules</a>
+            <a href="#" class="opt-btn">💎 Join VIP Channel</a>
+        </div>
+    </div>
 
 </body>
 </html>
+
