Update link for joining YouTube channel

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
         <div class="options">
             <a href="#" class="opt-btn">🚀 Get Started Now</a>
             <a href="#" class="opt-btn">📁 Download Modules</a>
-            <a href="#" class="opt-btn">💎 Join VIP Channel</a>
+            <a href="https://youtube.com/@walagamerxd?si=QCJRxmDCAag0b9k3" class="opt-btn">💎 Join YOUTUBE Channel</a>
         </div>
     </div>
 
